--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "@playwright/test": "^1.46.1",
     "@types/node": "^22.4.2"
+  },
+  "dependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   }
 }
